--- a/css/estilo.css
+++ b/css/estilo.css
@@ -22,7 +22,7 @@
   font-weight: bold;
 }
 
-/* CLIMA */
+/* CLIMA */ 
 .wheater-container {
   align-items: center;
 }
@@ -35,6 +35,44 @@
 .wheater-container h3 {
   font-size: 18px;
 }
+
+
+#carga-container {
+  
+ background-color: rgba(250, 240, 245, 0.9);
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  -webkit-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  transition: all 1s ease;
+  z-index: 10000;
+}
+#carga{
+  border: 15px solid #ccc;
+  border-top-color: #FC8A73;
+  border-top-style: groove;
+  height: 100px;
+  width: 100px;
+  border-radius: 100%;
+
+  position: absolute;
+  top: 0px;
+  Left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+
+  -webkit-animation: girar 1.5s linear infinite;
+  -0-animation: girar 1.5s linear infinite;
+  animation: girar 1.5s linear infinite;
+}
+
+@keyframes girar {
+  from { transform: rotate(0deg);}
+  to {transform: rotate(360deg);}
+}
+
 
 
 
@@ -56,7 +94,6 @@
   color:#FC8A73;}
 
 /* BOTONES */
-
 .addToCart{
   border: 0;
   line-height: 2.5;
